--- a/exercicio/proge1/estilo/style.css
+++ b/exercicio/proge1/estilo/style.css
@@ -1,11 +1,21 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2? family= Oswald:wght@200 & family= Sriracha & display=swap');
+
+@import url('https://fonts.googleapis.com/css2? family= Passion+One:wght@900 & display=swap');
+
+:root {
+    --font1: Verdana , Geneva, Tahoma, sans-serif;
+    --font2:   'Sriracha', cursive;
+  --font3: 'Passion One', cursive;
+}
  * {
-    margin: opx;
+    margin: 0px;
     padding: 0px;
 }
 html , body {
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--font1);
 
 }
 header {
@@ -14,8 +24,10 @@ header {
     text-align: center;
 }
 header > h1 {
-    padding-top: 40px;
+    padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--font2);
+    font-size: 10vw;
 }
 
 header > p {
@@ -36,13 +48,16 @@ padding-top: 10vh;
 padding-bottom: 10vh;
 line-height: 2em;
 padding-left: 30px;
+font-family: var(--font3);
+font-size: 3vw;
 }
 section.normal {
     background-color: white;
     color: black;
 }
 section.imagem > p {
-    width: 400px;
+ display: inline-block;
+ padding: 4px;
 background-color: rgba(0, 0, 0, 0.233);
 }
 
