--- a/exercicio/proge1/estilo/style.css
+++ b/exercicio/proge1/estilo/style.css
@@ -51,6 +51,10 @@ padding-left: 30px;
 font-family: var(--font3);
 font-size: 3vw;
 }
+section > p {
+    padding-bottom: 2em;
+}
+
 section.normal {
     background-color: white;
     color: black;
@@ -58,18 +62,31 @@ section.normal {
 section.imagem > p {
  display: inline-block;
  padding: 4px;
-background-color: rgba(0, 0, 0, 0.233);
+background-color: rgba(0, 0, 0, 0.514);
+text-shadow: 1px 1px 0px black;
 }
 
+section#img01 {
+background-image: url("../imagens/background001.jpg");
+background-position: right center;
+background-size: cover;
+}
+section#img02 {
+background-image: url("../imagens/background002.jpg");
+background-position: right center;
 
+}
 
 section.imagem {
     background-color: rgba(51, 51, 51);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.514) ;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 footer {
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.514);
     color: white;
     text-align: center;
     padding: 10px;
