--- a/exercicio/Landing Page/style.css
+++ b/exercicio/Landing Page/style.css
@@ -4,9 +4,116 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-    text-decoration: none;
+  text-decoration: none;
 }
 body {
     font-size: 100%;
     background: linear-gradient(68.15deg, #2F2325 16.62%, #8E5D52 85.61%);
+}
+.cabecalho{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    padding: 24px;
+
+}
+.cabecalho-imagem {
+    height:  50px;
+    border-radius: 100%;
+    height: 72px;
+}
+.cabecalho-menu {
+    display: flex;
+    gap: 29px;
+}
+.cabecalho-menu-item {
+    font-family: 'Sarala', sans-serif;
+    color: #fff2e7;
+    font-weight: 400;
+    font-size: 18px;
+
+}
+.conteudo {
+    margin-bottom: 48px;
+    border-top: 0.4px solid #fff2e7;
+}
+.conteudo-principal {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+.conteudo-principal-escrito {
+    display: flex;
+    flex-direction: column;
+    gap: 29px;
+}
+.conteudo-principal-escrito-titulo {
+    font-family: 'Righteous', cursive;
+    font-weight: 400;
+    font-size: 64px;
+    color: #fff2e7;
+}
+.conteudo-principal-subtitulo {
+    font-family: 'Sarala' , sans-serif;
+    font-weight: 400;
+    font-size: 24px;
+    color: #ECD6C4;
+}
+.conteudo-principal-escrito-botao {
+    background-color: #ECD6C4;
+    width: 180px;
+    height: 60px;
+    border: none;
+    box-shadow: 4px 5px 4px rgba(0,0,0,0.25);
+    border-radius: 20px;
+    font-family: 'Sarala',sans-serif;
+    font-weight: 400;
+    font-size: 24px;
+    color: #2F2325;
+}
+.conteudo-principal-escrito-botao:hover{
+    background-color: rgba(226, 214, 196, 0.544444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444444);
+}
+.conteudo-principal-imagem {
+    height: 290px;
+    border-radius: 100%;
+    padding: 10px;
+    
+
+}
+.conteudo-secundario {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+    margin-top: 48px;
+
+}
+.conteudo-secundario-titulo {
+    border-top: 0.4px solid #fff2e7;
+    padding-top: 48px;
+    font-family: 'Righteous', cursive;
+    font-weight: 400;
+    font-size: 24px;
+    color: #ECD6C4;
+    margin-bottom: 16px;
+
+}
+.conteudo-secundario-paragrafo {
+    font-family: 'Sarala',sans-serif;
+    font-weight: 290;
+    font-size: 18px;
+    color: #ECD6C4;
+}
+.rodape {
+    padding: 29px ;
+    border-top: 0.4px solid #fff2e7;
+}
+.rodape-imagem {
+    height: 60px;
+    display: block;
+    margin: 0px auto;
+
 }
